[gd_scene load_steps=4 format=3 uid="uid://cvixccpx56gji"]

[ext_resource type="Theme" uid="uid://cs43hn6vwl7k1" path="res://Menus/Menu.tres" id="1_73piq"]
[ext_resource type="Script" uid="uid://d14q6l4q0fqjh" path="res://Menus/Pause/Pause.gd" id="2_bnwxe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_73piq"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 20
border_width_top = 15
border_width_right = 20
border_width_bottom = 25
border_color = Color(0, 0, 0, 1)

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_73piq")
script = ExtResource("2_bnwxe")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.0470588, 0.0352941, 0.564706)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.0
offset_top = -302.0
offset_right = 269.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_73piq")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Resume"

[node name="ControlsButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Controls"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
